--- a/backend/instruct/instruct/src/main/resources/application.properties
+++ b/backend/instruct/instruct/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.application.name=instruct
+﻿server.port=8081
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
