--- a/backend/instruct/instruct/pom.xml
+++ b/backend/instruct/instruct/pom.xml
@@ -77,6 +77,10 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.12.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
